--- a/SkcCurrencyApi.csproj
+++ b/SkcCurrencyApi.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UserSecretsId>91ab13c0-ec02-4185-8f2b-ba6a28d597b6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 
 </Project>
